--- a/index.html
+++ b/index.html
@@ -5,73 +5,159 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>US States Dashboard</title>
   <link rel="stylesheet" href="assets/styles.css"/>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body data-page="home">
-  <nav class="nav">
-    <div class="brand">US States Dashboard</div>
-    <div class="links">
+<body>
+  <header class="nav">
+    <div><strong>US States Dashboard</strong></div>
+    <nav class="right">
       <a href="read.html">Data Table</a>
       <a href="create.html">Create</a>
       <a href="update.html">Update</a>
       <a href="delete.html">Delete</a>
       <a href="data.html">Charts</a>
       <a href="about.html">About</a>
-    </div>
-    <a class="btn" href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank">GitHub</a>
-  </nav>
+      <a class="btn btn-ghost" href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank">GitHub</a>
+    </nav>
+  </header>
 
-  <main class="container grid grid-3">
-    <section class="panel kpi">
-      <div class="label">Total Population</div>
-      <div id="kpi-pop" class="value">—</div>
-      <div class="sub">Across all states in the dataset</div>
-    </section>
-    <section class="panel kpi">
-      <div class="label">Total GDP</div>
-      <div id="kpi-gdp" class="value">—</div>
-      <div class="sub">Aggregate (USD)</div>
-    </section>
-    <section class="panel kpi">
-      <div class="label">Total Land Area</div>
-      <div id="kpi-area" class="value">—</div>
-      <div class="sub">km²</div>
-    </section>
-
-    <section class="panel" style="grid-column:1/-1">
-      <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:8px">
-        <h3 style="margin:0">External Insights</h3>
-        <button id="insight-refresh" class="btn">Refresh</button>
-      </div>
-      <div id="insight-loader" class="card-subtle mono">Loading latest USA GDP & Population…</div>
-      <div id="insight-error" class="notice" style="display:none">Couldn't load insights (check network/privacy shields). Showing local data only.</div>
-      <div class="insights">
-        <div class="card-subtle">
-          <div style="color:#9bb3c7;font-size:12px;margin-bottom:6px">USA GDP (current US$)</div>
-          <div id="insight-gdp" class="value" style="font-size:28px">—</div>
-          <div style="color:#9bb3c7;font-size:12px;margin-top:6px">Source: World Bank Open Data</div>
+  <main class="container">
+    <!-- KPIs -->
+    <section class="grid grid-3">
+      <div class="card">
+        <div class="card-title">Total Population</div>
+        <div class="kpi-wrap">
+          <div id="kpiPopulation" class="kpi-number">—</div>
         </div>
-        <div class="card-subtle">
-          <div style="color:#9bb3c7;font-size:12px;margin-bottom:6px">USA Population</div>
-          <div id="insight-pop" class="value" style="font-size:28px">—</div>
-          <div style="color:#9bb3c7;font-size:12px;margin-top:6px">Source: World Bank Open Data</div>
+        <div class="card-sub">Across all states in the dataset</div>
+      </div>
+
+      <div class="card">
+        <div class="card-title">Total GDP</div>
+        <div class="kpi-wrap">
+          <div id="kpiGDP" class="kpi-number">—</div>
+        </div>
+        <div class="card-sub">Aggregate (USD)</div>
+      </div>
+
+      <div class="card">
+        <div class="card-title">Total Land Area</div>
+        <div class="kpi-wrap">
+          <div id="kpiArea" class="kpi-number">—</div>
+          <span class="kpi-unit">km²</span>
         </div>
       </div>
     </section>
 
-    <section class="panel" style="grid-column:1/-1">
-      <h3 style="margin-top:0">Get Started</h3>
-      <p>Use CRUD pages to manage records. Charts update automatically.</p>
-      <a class="btn" href="create.html">Add a State</a>
+    <!-- External Insights (World Bank) -->
+    <section class="card" style="margin-top:20px">
+      <div style="display:flex;justify-content:space-between;align-items:center">
+        <h3 class="section-title" style="margin:0">External Insights</h3>
+        <button id="wbRefresh" class="btn btn-ghost">Refresh</button>
+      </div>
+      <p class="muted" style="margin-top:8px">World Bank (USA)</p>
+
+      <div class="row" style="margin-top:10px">
+        <div class="panel">
+          <div class="muted">USA GDP (current US$)</div>
+          <div id="wbGDP" style="font-weight:800;font-size:1.4rem;margin-top:6px">—</div>
+          <div id="wbGDPYear" class="muted" style="margin-top:4px"></div>
+          <div class="muted" style="margin-top:6px">Source: World Bank Open Data</div>
+        </div>
+        <div class="panel">
+          <div class="muted">USA Population</div>
+          <div id="wbPOP" style="font-weight:800;font-size:1.4rem;margin-top:6px">—</div>
+          <div id="wbPOPYear" class="muted" style="margin-top:4px"></div>
+          <div class="muted" style="margin-top:6px">Source: World Bank Open Data</div>
+        </div>
+      </div>
+    </section>
+
+    <section class="card" style="margin-top:20px">
+      <h3 class="section-title">Get Started</h3>
+      <p class="muted">Use CRUD pages to manage records. Charts update automatically.</p>
+      <a class="btn btn-primary" href="create.html" style="margin-top:10px">Add a State</a>
     </section>
   </main>
 
-  <footer>© 2025 US States Dashboard</footer>
+  <footer class="footer">© 2025 US States Dashboard</footer>
 
+  <!-- Scripts (keep order) -->
+  <script src="assets/utils.js"></script>
   <script src="assets/model.js"></script>
-  <script src="assets/controller.js"></script>
+  <script src="assets/api.js"></script>
+  <script>
+    // --- Format helper (fallback if utils doesn’t expose one) ---
+    const fmt = (n) => {
+      try { return Number(n).toLocaleString('en-US'); }
+      catch { return n; }
+    };
 
-  <!-- Bot on every page -->
+    // --- Load local totals for KPIs ---
+    function loadKPIs(){
+      try{
+        const store = (window.StateStore || window.App?.StateStore || window.Model);
+        const all = store?.getAll ? store.getAll() : (JSON.parse(localStorage.getItem('US_STATES_DB_V3')||'{"states":[]}').states);
+        const totals = all.reduce((acc, s)=>({
+          pop: acc.pop + (Number(s.population)||0),
+          gdp: acc.gdp + (Number(s.gdp)||0),
+          area: acc.area + (Number(s.land_area)||0)
+        }), {pop:0,gdp:0,area:0});
+
+        document.getElementById('kpiPopulation').textContent = fmt(totals.pop);
+        document.getElementById('kpiGDP').textContent = '$' + fmt(totals.gdp);
+        document.getElementById('kpiArea').textContent = fmt(totals.area);
+      }catch(e){
+        console.error('KPI error', e);
+      }
+    }
+
+    // --- World Bank cards (latest year automatically) ---
+    async function loadWB(){
+      const gdpEl = document.getElementById('wbGDP');
+      const gdpY = document.getElementById('wbGDPYear');
+      const popEl = document.getElementById('wbPOP');
+      const popY = document.getElementById('wbPOPYear');
+
+      const GDP_URL = 'https://api.worldbank.org/v2/country/USA/indicator/NY.GDP.MKTP.CD?format=json';
+      const POP_URL = 'https://api.worldbank.org/v2/country/USA/indicator/SP.POP.TOTL?format=json';
+
+      try{
+        const [gdpRes, popRes] = await Promise.all([fetch(GDP_URL), fetch(POP_URL)]);
+        const [gdpJson, popJson] = await Promise.all([gdpRes.json(), popRes.json()]);
+
+        const gdpRow = (gdpJson?.[1]||[]).find(r => r.value !== null);
+        const popRow = (popJson?.[1]||[]).find(r => r.value !== null);
+
+        if(gdpRow){
+          gdpEl.textContent = '$' + fmt(gdpRow.value);
+          gdpY.textContent = `(Year: ${gdpRow.date})`;
+        }else{
+          gdpEl.textContent = '—';
+          gdpY.textContent = '';
+        }
+        if(popRow){
+          popEl.textContent = fmt(popRow.value);
+          popY.textContent = `(Year: ${popRow.date})`;
+        }else{
+          popEl.textContent = '—';
+          popY.textContent = '';
+        }
+      }catch(err){
+        console.warn('World Bank fetch failed', err);
+        gdpEl.textContent = '—';
+        popEl.textContent = '—';
+        gdpY.textContent = '';
+        popY.textContent = '';
+      }
+    }
+
+    document.getElementById('wbRefresh').addEventListener('click', loadWB);
+
+    loadKPIs();
+    loadWB();
+  </script>
+
+  <!-- bot on every page -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
